@@ -1,6 +1,6 @@
 /*
   zip_dirent.c -- read directory entry (local or central), clean dirent
-  Copyright (C) 1999-2007 Dieter Baron and Thomas Klausner
+  Copyright (C) 1999-2008 Dieter Baron and Thomas Klausner
 
   This file is part of libzip, a library to manipulate ZIP archives.
   The authors can be contacted at <libzip@nih.at>
@@ -314,6 +314,50 @@ _zip_dirent_read(struct zip_dirent *zde, FILE *fp,
       *bufp = cur;
 
     return 0;
+}
+
+
+
+/* _zip_dirent_torrent_normalize(de);
+   Set values suitable for torrentzip.
+*/
+
+void
+_zip_dirent_torrent_normalize(struct zip_dirent *de)
+{
+    static struct tm torrenttime = {
+	0, 32, 23,  24, 11, 96,  0, 0,  -1, 0, "UTC"
+    };
+    static last_mod = 0;
+
+    if (last_mod == 0) {
+	time_t now;
+	struct tm *l;
+
+	time(&now);
+	l = localtime(&now);
+	torrenttime.tm_gmtoff = l->tm_gmtoff;
+	torrenttime.tm_zone = l->tm_zone;
+	last_mod = mktime(&torrenttime);
+    }
+    
+    de->version_madeby = 0;
+    de->version_needed = 20; /* 2.0 */
+    de->bitflags = 2; /* maximum compression */
+    de->comp_method = ZIP_CM_DEFLATE;
+    de->last_mod = last_mod;
+
+    de->disk_number = 0;
+    de->int_attrib = 0;
+    de->ext_attrib = 0;
+    de->offset = 0;
+
+    free(de->extrafield);
+    de->extrafield = NULL;
+    de->extrafield_len = 0;
+    free(de->comment);
+    de->comment = NULL;
+    de->comment_len = 0;
 }
 
 
